Correct spacing for sections

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,13 @@ html {
   justify-content: flex-start;
   flex-wrap: wrap;
   margin: auto;
-  overflow:hidden
+  overflow: hidden;
+}
+
+body {
+  wifth: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 img {
@@ -21,15 +27,21 @@ img {
   color: white;
   height: 100vh;
   width: 25vw;
+  float: left;
+  display: inline-block;
 }
 
 .form-section {
   background-color: #A9AAD2;
   height: 40vh;
-  width: 75vw;
+  width: 72vw;
+  float: left;
 
 }
 
 .idea-section {
   background-color: #EAEAF4;
+  height: 60vh;
+  width: 72vw;
+  float: left;
 }
